# pylore

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
docs/source/: index.rst
pylore/: datasets.py
pylore/data/: fangraphs-batting-2024.csv
source/: conf.py  index.rst
