[project]

name = "pylore"
version = "0.1.0"
description = "Python Library for Easy Exploratory Data Analysis"
authors = [{ name = "Nik Dudaev", email = "nikolay.dudaev@proton.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["matplotlib (>=3.10.1,<4.0.0)", "pandas (>=2.2.3,<3.0.0)", "seaborn (>=0.13.2,<0.14.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
bump2version = "^1.0.1"

[tool.taskipy.tasks]
test = { cmd = "pytest", help = "runs all tests with pytest" }
build-docs = { cmd = "sphinx-build -M html docs/source/ docs/build", help = "builds documentation in html" }
